# small_wrappers

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: clang-format.yml
sw/: lazy_init.h  propagate_const.h
tests/: CMakeLists.txt  lazy_init_tests.cpp  propagate_const_tests.cpp
